--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@
 .page-header { color: #fff; text-align: center; background-image: url("../../images/background1.png"); background-size:cover}
 
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 { 
-  margin-left: 200px;
+  margin-left: 200rem;
   margin-top: 2rem;
   margin-bottom: 1rem; 
   font-weight: normal; 
