--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,20 +5,13 @@
 
 .page-header { color: #fff; text-align: center; background-image: url("../../images/background1.png"); background-size:cover}
 
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 { 
-  margin-left: 2rem;
-  margin-top: 2rem;
-  margin-bottom: 1rem; 
-  font-weight: normal; 
-  color: #000000; }
-
 /* The side navigation menu */
 .sidebar {
   margin: 0;
   padding: 0;
   width: 200px;
   background-color: #f1f1f1;
-  position: fixed;
+  position: relative;
   height: 100%;
   overflow: auto;
 }
@@ -49,3 +42,4 @@ div.content {
   padding: 1px 16px;
   height: 1000px;
 }
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 { margin-top: 2rem;margin-bottom: 1rem; font-weight: normal; color: #000000; }
