--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,7 +41,9 @@ div.content {
   margin-left: 200px;
   padding: 1px 16px;
   height: 1000px;
+  margin-top: 2rem;
+  margin-bottom: 1rem; 
+  font-weight: normal;
+  color: #000000;
 }
-.content { margin-left : 160px; }
 
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 { margin-top: 2rem;margin-bottom: 1rem; font-weight: normal; color: #000000; }
