--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,13 +37,10 @@
 }
 
 /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
-div.content {
-  margin-left: 200px;
-  padding: 1px 16px;
-  height: 1000px;
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 { 
   margin-top: 2rem;
-  margin-bottom: 1rem; 
+  margin-bottom: 1rem;
+  margin-left:4rem;
   font-weight: normal;
-  color: #000000;
-}
+  color: #000000; }
 
