--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,7 +40,11 @@
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 { 
   margin-top: 2rem;
   margin-bottom: 1rem;
-  margin-left:4rem;
+  margin-left:13rem;
   font-weight: normal;
   color: #000000; }
+
+.content{
+  margin-left:13rem;
+}
 
