--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
 /* The side navigation menu */
 .sidebar {
   margin: 0;
-  padding: 0;
+  padding: 200px;
   width: 200px;
   background-color: #f1f1f1;
   position: fixed;
@@ -48,3 +48,6 @@ div.content{
   margin-left:13rem;
 }
 
+.content{
+  margin-left:13rem;
+}
