--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
 /* The side navigation menu */
 .sidebar {
   margin: 0;
-  padding: 200px;
+  padding: 0;
   width: 200px;
   background-color: #f1f1f1;
   position: fixed;
