--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,4 +42,6 @@
   margin-bottom: 1rem;
   margin-left:13rem;
   font-weight: normal;
-  color: #000000; }
+  color: #000000; 
+  padding: 1px 16px;
+  height: 1000px;}
