--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,3 +49,8 @@ div.content {
   padding: 1px 16px;
   height: 1000px;
 }
+.page.layout {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
