--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,7 +49,7 @@ div.content {
   padding: 1px 16px;
   height: 1000px;
 }
-.page.layout {
+page.layout {
   margin-left: 200px;
   padding: 1px 16px;
   height: 1000px;
