--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,6 +12,16 @@
   font-weight: normal;
   color: #000000;}
 
+.main-content body {
+  padding: 0;
+  margin: 0;
+  margin-left:200px;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: $body-text-color;
+}
+
 /* The side navigation menu */
 .sidebar {
   margin: 0;
@@ -43,14 +53,4 @@
   color: white;
 }
 
-/* Page content. The value of the margin-left property should match the value of the sidebar's width property */
-div.content {
-  margin-left: 200px;
-  padding: 1px 16px;
-  height: 1000px;
-}
-page.layout {
-  margin-left: 200px;
-  padding: 1px 16px;
-  height: 1000px;
-}
+
