--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,22 +5,22 @@
 
 .page-header { color: #fff; text-align: center; background-image: url("../../images/background1.png"); background-size:cover}
 
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6{ 
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  margin-left:13rem;
-  font-weight: normal;
-  color: #000000;}
-
-.main-content body {
+body {
   padding: 0;
   margin: 0;
   margin-left:200px;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: $body-text-color;
+  color: #000000;
 }
+
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6{ 
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  margin-left:13rem;
+  font-weight: normal;
+  color: #000000;}
 
 /* The side navigation menu */
 .sidebar {
