--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,13 @@
     </header>
     
     <div class="sidebar">
-      <a class="active" href="https://tuftsdatalab.github.io/intro-to-ngs-bioinformatics/">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a class="active" href="https://tuftsdatalab.github.io/intro-to-ngs-bioinformatics/">Intro To HPC</a>
+      <a href="#news">Intro To R</a>
+      <a href="#contact">Introduction To RNA-Seq</a>
+      <a href="#about">AlphaFold 2</a>
+      <a href="#about">Microbiome</a>
+      <a href="#about">Single-Cell RNA-Seq</a>
+      <a href="#about">RNA-Seq With Galaxy</a>
     </div>
 
     <main id="content" class="main-content" role="main">
