--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,13 +28,14 @@
     </header>
     
     <div class="sidebar">
-      <a class="active" href="https://tuftsdatalab.github.io/intro-to-ngs-bioinformatics/">Intro To HPC</a>
-      <a href="#news">Intro To R</a>
-      <a href="#contact">Introduction To RNA-Seq</a>
-      <a href="#about">AlphaFold 2</a>
+      <a class="active" href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/introHPC0.html">Intro To HPC</a>
+      <a href="https://bionomad.github.io/omicsCore/IntroToR/IntroToR.html">Intro To R</a>
+      <a href="https://tuftsdatalab.github.io/intro-to-ngs-bioinformatics/">Intro To NGS</a>
+      <a href="https://huoww07.github.io/Bioinformatics-for-RNA-Seq/">Introduction To RNA-Seq</a>
+      <a href="https://tuftsdatalab.github.io/Intro_To_AlphaFold2/">AlphaFold 2</a>
       <a href="#about">Microbiome</a>
       <a href="#about">Single-Cell RNA-Seq</a>
-      <a href="#about">RNA-Seq With Galaxy</a>
+      <a href="https://tuftsdatalab.github.io/intro-to-rnaseq-with-galaxy/">RNA-Seq With Galaxy</a>
     </div>
 
     <main id="content" class="main-content" role="main">
