--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@
   padding: 0;
   width: 200px;
   background-color: #f1f1f1;
-  position: absolute;
+  position: fixed;
   height: 100%;
   overflow: auto;
 }
