--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,8 @@
 /* The side navigation menu */
 .sidebar {
   margin: 0;
+  margin-bottom: -5000px; /* any large number will do */
+  padding-bottom: 5000px; 
   padding: 0;
   width: 200px;
   background-color: #f1f1f1;
