--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@
   padding: 0;
   width: 200px;
   background-color: #f1f1f1;
-  position: fixed;
+  position: relative;
   height: 100%;
   overflow: auto;
 }
