--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     </header>
     
     <div class="sidebar">
-      <a class="active" href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/">Workshop Home Page</a>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/">Workshop Home Page</a>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/introHPC0.html">Intro To HPC</a>
       <a href="https://bionomad.github.io/omicsCore/IntroToR/IntroToR.html">Intro To R</a>
       <a href="https://tuftsdatalab.github.io/intro-to-ngs-bioinformatics/">Intro To NGS</a>
