--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     <div class="sidebar">
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/">Workshop Home Page</a>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/introHPC0.html">Intro To HPC</a>
-      <a href="https://bionomad.github.io/omicsCore/IntroToR/IntroToR.html">Intro To R</a>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToR/IntroToR.html">Intro To R</a>
       <a href="https://tuftsdatalab.github.io/intro-to-ngs-bioinformatics/">Intro To NGS</a>
       <a href="https://huoww07.github.io/Bioinformatics-for-RNA-Seq/">Introduction To RNA-Seq</a>
       <a href="https://tuftsdatalab.github.io/Intro_To_AlphaFold2/">AlphaFold 2</a>
