--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToR/IntroToR.html">Intro To R</a>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToNGS/README.html">Intro To NGS</a>
       <a href="https://huoww07.github.io/Bioinformatics-for-RNA-Seq/">Introduction To RNA-Seq</a>
-      <a href="https://tuftsdatalab.github.io/Intro_To_AlphaFold2/">AlphaFold 2</a>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/Intro_To_AlphaFold2/README.html">AlphaFold 2</a>
       <a href="#about">Microbiome</a>
       <a href="#about">Single-Cell RNA-Seq</a>
       <a href="https://tuftsdatalab.github.io/intro-to-rnaseq-with-galaxy/">RNA-Seq With Galaxy</a>
