--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/Intro_To_AlphaFold2/README.html">AlphaFold 2</a>
       <a href="#about">Microbiome</a>
       <a href="#about">Single-Cell RNA-Seq</a>
-      <a href="https://tuftsdatalab.github.io/intro-to-rnaseq-with-galaxy/">RNA-Seq With Galaxy</a>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToRNAseqGalaxy/README.html">RNA-Seq With Galaxy</a>
     </div>
 
     <main id="content" class="main-content" role="main">
