--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,12 @@
     
     <div class="sidebar">
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/">Workshop Home Page</a>
+      <p>NGS Analysis</p>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/introHPC0.html">Intro To HPC</a>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToR/IntroToR.html">Intro To R</a>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToNGS/README.html">Intro To NGS</a>
       <a href="https://huoww07.github.io/Bioinformatics-for-RNA-Seq/">Introduction To RNA-Seq</a>
+      <a>Protein Structure Analysis</a>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/Intro_To_AlphaFold2/README.html">AlphaFold 2</a>
       <a href="#about">Microbiome</a>
       <a href="#about">Single-Cell RNA-Seq</a>
