--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,7 +14,7 @@
 /* The side navigation menu */
 .sidebar {
   margin: 0;
-  padding: 0;
+  padding: 5px;
   width: 200px;
   background-color: #f1f1f1;
   position: absolute;
