--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,15 +29,17 @@
     
     <div class="sidebar">
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/">Workshop Home Page</a>
-      <p>NGS Analysis</p>
+      <h3>The Basics</h3>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/introHPC0.html">Intro To HPC</a>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToR/IntroToR.html">Intro To R</a>
+      <h3>NGS Analysis</h3>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToNGS/README.html">Intro To NGS</a>
       <a href="https://huoww07.github.io/Bioinformatics-for-RNA-Seq/">Introduction To RNA-Seq</a>
-      <h4>Protein Structure Analysis</h4>
-      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/Intro_To_AlphaFold2/README.html">AlphaFold 2</a>
       <a href="#about">Microbiome</a>
       <a href="#about">Single-Cell RNA-Seq</a>
+      <h3>Protein Structure Analysis</h3>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/Intro_To_AlphaFold2/README.html">AlphaFold 2</a>
+      <h3>Galaxy Tutorials</h3>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToRNAseqGalaxy/README.html">RNA-Seq With Galaxy</a>
     </div>
 
