--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@
   padding: 10px;
   width: 200px;
   position: absolute;
-  background-color:;#f1f1f1
+  background-color:#f1f1f1;
   height: 100%;
   overflow: auto;
 }
