--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@
   padding: 16px;
   width: 250px;
   position: absolute;
-  background-color:#dae4f5;
+  background-color:#e4eaf5;
   height: 100%;
   overflow: auto;
 }
