--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/AmpliconSeq/AmpliconSeq1.html">Single-Cell RNA-Seq</a>
       <h4>Metagenomics Analysis</h4>
       <a href="#about">Amplicon Analysis</a>
+      <a href="#about">Shotgun Metagenomics</a>
       <h4>Protein Structure Analysis</h4>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/Intro_To_AlphaFold2/README.html">AlphaFold 2</a>
       <h4>Galaxy Tutorials</h4>
