--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,9 @@
       <h4>NGS Analysis</h4>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToNGS/README.html">Intro To NGS</a>
       <a href="https://huoww07.github.io/Bioinformatics-for-RNA-Seq/">Introduction To RNA-Seq</a>
-      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/AmpliconSeq/AmpliconSeq1.html">Single-Cell RNA-Seq</a>
+      <a href="#about">Single-Cell RNA-Seq</a>
       <h4>Metagenomics Analysis</h4>
-      <a href="#about">Amplicon Analysis</a>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/AmpliconSeq/AmpliconSeq1.html">Amplicon Analysis</a>
       <a href="#about">Shotgun Metagenomics</a>
       <h4>Protein Structure Analysis</h4>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/Intro_To_AlphaFold2/README.html">AlphaFold 2</a>
