--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
       <h4>Protein Structure Analysis</h4>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/Intro_To_AlphaFold2/README.html">AlphaFold 2</a>
       <h4>Galaxy Tutorials</h4>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToNGSGalaxy/README.html">Intro To NGS With Galaxy</a>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToRNAseqGalaxy/README.html">RNA-Seq With Galaxy</a>
     </div>
 
