--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToR/IntroToR.html">Intro To R</a>
       <h4>NGS Analysis</h4>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToNGS/README.html">Intro To NGS</a>
-      <a href="https://huoww07.github.io/Bioinformatics-for-RNA-Seq/">Introduction To RNA-Seq</a>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/IntroToRNAseq/README.html">Introduction To RNA-Seq</a>
       <a href="#about">Single-Cell RNA-Seq</a>
       <h4>Metagenomics Analysis</h4>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/AmpliconSeq/AmpliconSeq1.html">Amplicon Analysis</a>
