--- a/_layouts/hpcForLifeSciences_July2022.html
+++ b/_layouts/hpcForLifeSciences_July2022.html
@@ -28,7 +28,7 @@
     </header>
     
     <div class="sidebar">
-      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/">Workshop Home Page</a>
+      <a href=#>Workshop Home Page</a>
     </div>
 
     <main id="content" class="main-content" role="main">
