--- a/_layouts/hpcForLifeSciences_July2022.html
+++ b/_layouts/hpcForLifeSciences_July2022.html
@@ -28,7 +28,12 @@
     </header>
     
     <div class="sidebar">
-      <a href=#>Workshop Home Page</a>
+      <h4>Day 1: Intro to HPC computing</h4>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/hpcForLifeSciences_July2022/IntroToSlurm/IntroToSlurm1.html">Intro to Slurm</a>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/hpcForLifeSciences_July2022/IntroToLinux/IntroToLinux1.html">Intro to Linux</a>
+      <h4>Day 1: Intro to HPC computing</h4>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/hpcForLifeSciences_July2022/NgsDataDownloadQc/NgsDataDownloadQc1.html">NGS Data Download/QC</a>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/hpcForLifeSciences_July2022/NgsDataAlignmentViewing/NgsDataAlignmentViewing1.html">NGS Data Alignment/Viewing</a>
     </div>
 
     <main id="content" class="main-content" role="main">
