--- a/_layouts/hpcForLifeSciences_July2022.html
+++ b/_layouts/hpcForLifeSciences_July2022.html
@@ -28,7 +28,7 @@
     </header>
     
     <div class="sidebar">
-      <h4 href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/hpcForLifeSciences_July2022/">Workshop Home</h4>
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/hpcForLifeSciences_July2022/">Workshop Home</a>
       <h4>Day 1: Intro to HPC Computing</h4>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/hpcForLifeSciences_July2022/IntroToSlurm/IntroToSlurm1.html">Intro to Slurm</a>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/hpcForLifeSciences_July2022/IntroToLinux/IntroToLinux1.html">Intro to Linux</a>
