--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,4 +42,17 @@
   background-color:#24274a;
 }
 
+    
+#header { border:1px solid #000; height:300px; 
+    padding:10px; margin-left: 200px;
+    margin-top:-10px;
+
+}
+
+#content {
+  border:1px solid #000;
+  height:700px;
+  margin-left: 250px;
+  padding:10px; 
+}
 
