--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,7 @@
 /* The side navigation menu */
 .sidebar {
   margin: 0;
+  border:1px solid #000;
   padding: 16px;
   width: 250px;
   position: absolute;
@@ -43,14 +44,16 @@
 }
 
     
-#header { border:1px solid #000; height:300px; 
-    padding:10px; margin-left: 200px;
-    margin-top:-10px;
+#header { 
+  border:1px solid #000; 
+  height:300px; 
+  padding:10px; 
+  margin-left: 200px;
+  margin-top:-10px;
 
 }
 
 #content {
-  border:1px solid #000;
   margin-left: 250px;
   padding:10px; 
 }
