--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,9 @@
 
 .page-header { color: #fff; text-align: center; background-image: url("../../images/background1.png"); background-size:cover}
 
+.site-title {font-size: 50px;}
+
+
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6{ 
   margin-top: 2rem;
   margin-bottom: 1rem;
