--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 .page-header { color: #fff; text-align: center; background-image: url("../../images/background1.png"); background-size:cover}
 
-.site-title {font-size: 50px;}
+.site-title {font-size: 35px;}
 
 
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6{ 
@@ -58,6 +58,7 @@
 
 #content {
   margin-left: 250px;
+  border-top: 1px solid #000;
   padding:10px; 
 }
 
