--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,9 +3,7 @@
 
 @import "{{ site.theme }}";
 
-.page-header { color: #fff; text-align: center; background-image: url("../../images/background1.png"); background-size:cover}
-
-.site-title {font-size: 35px;}
+.page-header { color: #fff; text-align: center; background-image: url("../../images/newbackground.png"); background-size:cover}
 
 
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6{ 
