--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
     </header>
     
     <div class="sidebar">
+      <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/workshops/">Recent Workshops</a>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/">Self-Guided Menu</a>
       <h4>The Basics</h4>
       <a href="https://tuftsdatalab.github.io/Research_Technology_Bioinformatics/tutorials/IntroToHPC/introHPC0.html">Intro To HPC</a>
