--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,7 +55,8 @@
 }
 
 #content {
-  margin-left: 275px;
+  margin-left: 325px;
+  margin-right: 325px;
   border-top: 1px solid #000;
   padding:10px; 
 }
